--- a/test.html
+++ b/test.html
@@ -2,8 +2,8 @@
    <head>	Welcome my git repository <head>
 		   <body>
 
-			   Hi ! heartly welcome my git hub
+			  <h1 font color:green> Hi ! heartly welcome my git hub
 
-		   </body>
+	<h1>	   </body>
 </html>
 
